--- a/src/components/Pages/Landing/Landing.styles.css
+++ b/src/components/Pages/Landing/Landing.styles.css
@@ -1,6 +1,7 @@
 .img-container {
   width: 100%;
   height: 100vh;
+  object-fit: none;
   overflow: hidden;
 }
 
@@ -35,7 +36,7 @@
 
 .works-detail:hover {
   cursor: pointer;
-  border: 1px solid transparent;
+  border: 1px solid #d3d3d3;
   background-color: #4158d0;
   background-image: linear-gradient(43deg, #4158d0 0%, #c850c0 46%);
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
