--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,9 @@ code {
     "Courier New",
     monospace;
 }
+
+*, *::after, *::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
