Apply Julian changes

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,9 @@ code {
     monospace;
 }
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
