--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,80 @@
+.page-wrapper {
+  width: 100vw;
+  max-width: 100vw;
+  height: 100vh;
+  max-height: 100vh;
+  margin: 0;
+  background-color: var(--primary-color);
+  color: #333;
+  overflow: hidden;
+}
+
+.container {
+  margin-inline: auto;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.hero-info {
+  display: none;
+  padding: 1rem;
+  flex-grow: 1;
+  color: #0007;
+}
+
+.hero-info h1 {
+  font-size: 4rem;
+  line-height: 1;
+  margin: 0;
+}
+
+.hero-info p {
+  font-size: 1.25rem;
+  max-width: 25rem;
+  margin: 0;
+}
+
 .app {
-  text-align: center;
-}
-
-.app-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .app-logo {
-    animation: app-logo-spin infinite 20s linear;
-  }
-}
-
-.app-header {
-  background-color: #282c34;
   min-height: 100vh;
+  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
+  width: 100%;
+  max-width: 480px;
+  box-shadow:
+    0 0 0 2rem #0000000c,
+    0 0 0 4rem #0000000c,
+    0 0 0 6rem #0000000c;
 }
 
-.app-link {
-  color: #61dafb;
+.circle {
+  width: 20rem;
+  height: 20rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #eee;
+  text-align: center;
+  border-radius: 50%;
+  box-shadow: inset 0 0.3rem 0.75rem 5px #0001;
 }
 
-@keyframes app-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (min-width: 1024px) {
+  .hero-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
   }
+}
 
-  to {
-    transform: rotate(360deg);
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
   }
 }
