--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: stretch;
   color: black;
   width: 100%;
   max-width: 480px;
