--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,125 @@
     0 0 0 6rem #0000000c;
 }
 
+/* create profile page */
+
+.create-profile-page {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  padding: 1.25rem;
+}
+
+.create-profile-page header {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.back-btn {
+  padding: 0.5rem;
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 0.75rem;
+}
+
+.skip-btn {
+  background-color: transparent;
+  border: none;
+  font-size: 1.25rem;
+  cursor: pointer;
+}
+
+.create-profile-page main {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  overflow: auto;
+}
+
+.create-profile-page main h2 {
+  text-align: center;
+  font-weight: 400;
+}
+
+/* Gender component */
+.gender-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.gender-input {
+  display: none;
+}
+
+.gender-label {
+  padding: 0.875rem 1rem;
+  border-radius: 1rem;
+  border: 1px solid #dedede;
+  cursor: pointer;
+}
+
+input[type="radio"]:checked + .gender-label {
+  background-color: #FFFDA1;
+  font-weight: 700;
+}
+
+/* User preference */
+.preference-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.preference-label {
+  padding: 0.875rem 1rem;
+  border-radius: 1rem;
+  border: 1px solid #dedede;
+  cursor: pointer;
+}
+
+.preference-input {
+  display: none;
+}
+
+/* User interests */
+.interests-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.interests-label {
+  width: 45%;
+  display: flex;
+  align-items: center;
+  padding: 0.875rem 1rem;
+  border-radius: 1rem;
+  border: 1px solid #dedede;
+  cursor: pointer;
+}
+
+.interest-input {
+  display: none;
+}
+
+.profile-complete {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1.25rem;
+}
+
+
+
 @media (min-width: 1024px) {
   .hero-info {
     display: flex;
