--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,6 @@
 }
 
 /* create profile page */
-
 .create-profile-page {
   width: 100%;
   height: 100%;
@@ -67,7 +66,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-
 }
 
 .back-btn {
@@ -106,9 +104,11 @@
 }
 
 /* User Image */
-.image-output {
+.create-page-image-preview {
   width: 100%;
   height: 30vh;
+  background-size: cover;
+  background-position: center;
 }
 
 .profile-complete {
@@ -120,8 +120,6 @@
   justify-content: center;
   padding: 1.25rem;
 }
-
-
 
 @media (min-width: 1024px) {
   .hero-info {
