--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,13 @@
   cursor: pointer;
 }
 
+.loading {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-content: center;
+}
+
 .v-spacer {
   height: 2rem;
 }
